# FastCGIUtility

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindDBus.cmake  FindFCGI.cmake
src/fastcgi/: dispatcher.cpp  fastcgi.cpp  fastcgi.h  main.cpp  networkconfig.cpp
src/fastcgi/tests/: CMakeLists.txt  tests.cpp
src/fastcginetworkconfig/: dispatcher.cpp  dispatcher.h  fastcginetworkconfig.cpp  fastcginetworkconfig.h  main.cpp  networkconfig.cpp  networkconfig.h
src/fastcginetworkconfig/tests/: CMakeLists.txt  dispatcher-test.cpp  networkconfig-test.cpp
